CHANGELOG

2.0.20
UTILS:

BUGFIX:
* pa_appid-enabler | bugfix related to methods move to class UTIL

GENERAL:


2.0.19  (20211022)
UTILS:
* extend tests scripts for more QA
* sendGARP - introduce class RUNSSH - make use of in sendGARP
* sendGARP | extend command preparation with DNAT DST ip-address for test arp gratuitous
* pa_servicegroup-merger help | fix typo for argument dupalgorithm [thanks to Necip Cebeci ]
* pa_service-edit | introduce filter for sourceport.value and action sourceport-set / sourceport-delete

BUGFIX:
* pa_device-edit | bugfix for actions=devicegroupe-create:NAME if 'shared' is used as parentDG
* class RuleStore | bugfix to create shared pre-rulebase at correct place if not existent
* class IPsecTunnel | bugfix for not reading XML correctly for protocol part of a IPsec tunnel
* pa_address-merger / pa_service-merger | bugfix if picked object type differ from the parentDG choosen object [thanks to Olivier Straehler ]
* class IKEGateway | bugfix to not set XML nodes, which were not available at start
* pa_address-merger | bugfix do not delete picked address object if replacement was skipped once

GENERAL:


2.0.18 (20211019)
UTILS:
* pan-os-php / API / bash_autocompletion | extend with script xml-op-json and bpa-generator
* pa_key-manager | introduce support for license-apikey/bpa-api-key | extend class PanAPIConnector to store both apikey in .panconfkeystore
* pan-os-php | version include now php version

BUGFIX:
* UTIL all object merger script | bugfix to support argument DupAlgorithm [thanks to Necip Cebeci for finding and reporting this bug]
* framework | bugfix to support PHP version 8.0.X [thanks to Christopher Fettig ]

GENERAL:
* dockerfile - introduce bash_autocompletion for Dockerfile-cli - usage of ubuntu CLI with PAN-OS-PHP installed
* framework - update ubuntu_set_path_variable.sh - full installation is now possible, if Ubuntu is pre-installed