@@ -5,6 +5,7 @@ UTILS:
 
 BUGFIX:
 * pa_appid-enabler | bugfix related to methods move to class UTIL
+* class ObjRulecontainer / AddressGroup - to add object with same name but different owner of DG hierarchy only once
 
 GENERAL:
 
